@@ -1,5 +1,9 @@
+import logging
+log = logging.getLogger(__name__)
+
 filter_names = ('JBIG2Decode',)
 
 
 def decode(binary, params):
-    raise NotImplementedError('JBIG2Decode')
+    log.warning("JBIG2 decoder is not implemented. It returns raw unfiltered data.")
+    return binary
